# routes/brand.js
@@ -2,11 +2,14 @@ const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/brands');
 const { brandValidationRules, validateBrand } = require('../validators/brandValidator');
+const { isAuthenticated } = require('../middleware/authenticate');
 
 router.get('/', controller.getAll);
 router.get('/:id', controller.getOne);
-router.post('/', brandValidationRules(), validateBrand, controller.create);
-router.put('/:id', brandValidationRules(), validateBrand, controller.update);
-router.delete('/:id', controller.delete);
+
+// Estas requieren autenticación:
+router.post('/', isAuthenticated, brandValidationRules(), validateBrand, controller.create);
+router.put('/:id', isAuthenticated, brandValidationRules(), validateBrand, controller.update);
+router.delete('/:id', isAuthenticated, controller.delete);
 
 module.exports = router;
